force-app/main/default/objects/FIN_SubledgerCode__c/FIN_SubledgerCode__c.object-meta.xml
<CustomObject>
    <label>Subledger Code</label>
    <nameField>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subledger Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>