force-app/main/default/objects/FIN_SubledgerCode__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A/R</fullName>
            </value>
            <value>
                <fullName>Address Book</fullName>
            </value>
            <value>
                <fullName>Other Payments</fullName>
            </value>
            <value>
                <fullName>Revenues</fullName>
            </value>
            <value>
                <fullName>Taxes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>