force-app/main/default/objects/FIN_SubledgerCode__c/fields/Codelegacy__c.field-meta.xml
<CustomField>
    <fullName>Codelegacy__c</fullName>
    <label>Codelegacy</label>
    <length>25</length>
    <type>Text</type>
</CustomField>