force-app/main/default/objects/FIN_SubledgerCode__c/fields/FIN_Account__c.field-meta.xml
<CustomField>
    <fullName>FIN_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchant Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subledger Codes</relationshipLabel>
    <relationshipName>Subledger_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>