force-app/main/default/objects/FIN_SubledgerCode__c/fields/FIN_Active__c.field-meta.xml
<CustomField>
    <fullName>FIN_Active__c</fullName>
    <formula>TODAY() &gt; Start_Date__c
&amp;&amp;
TODAY() &lt; End_Date__c ||
ISNULL(End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>