force-app/main/default/objects/FIN_SubledgerCode__c/fields/FIN_Status__c.field-meta.xml
<CustomField>
    <fullName>FIN_Status__c</fullName>
    <formula>IF (
ISBLANK(Start_Date__c) &amp;&amp; ISBLANK(End_Date__c),
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;) + &apos; Active&apos;,
IF (
NOT(ISBLANK(Start_Date__c)) &amp;&amp; NOT(ISBLANK(End_Date__c)) &amp;&amp; TODAY()&lt;= End_Date__c&amp;&amp; TODAY()&gt;= Start_Date__c,
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;) + &apos; Active&apos;,
IF (
NOT(ISBLANK(Start_Date__c)) &amp;&amp; ISBLANK(End_Date__c) &amp;&amp; TODAY()&gt;= Start_Date__c,
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;) + &apos; Active&apos;,
IF (
NOT(ISBLANK(End_Date__c)) &amp;&amp; ISBLANK(Start_Date__c) &amp;&amp; TODAY()&lt;= End_Date__c,
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;) + &apos; Active&apos;, IMAGE(&apos;/img/samples/flag_red.gif&apos;, &apos;red&apos;) + &apos; Inactive&apos;)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>