force-app/main/default/objects/FIN_SubledgerCode__c/recordTypes/FIN_SWE_Subledger_Code.recordType-meta.xml
<RecordType>
    <fullName>FIN_SWE_Subledger_Code</fullName>
    <active>true</active>
    <label>SWE Subledger Code</label>
</RecordType>