force-app/main/default/objects/FIN_SubledgerCode__c/recordTypes/FIN_UK_Subledger_Code.recordType-meta.xml
<RecordType>
    <fullName>FIN_UK_Subledger_Code</fullName>
    <active>true</active>
    <label>UK Subledger Code</label>
</RecordType>