force-app/main/default/objects/FIN_SubledgerCode__c/recordTypes/FIN_US_Subledger_Code.recordType-meta.xml
<RecordType>
    <fullName>FIN_US_Subledger_Code</fullName>
    <active>true</active>
    <label>US Subledger Code</label>
</RecordType>