force-app/main/default/objects/FIN_SubledgerCode__c/listViews/FIN_SWE_Subledger_Codes.listView-meta.xml
<ListView>
    <fullName>FIN_SWE_Subledger_Codes</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>SWE</value>
    </filters>
    <label>SWE  Subledger Codes</label>
    <sharedTo>
        <group>SWE_Region</group>
    </sharedTo>
</ListView>