force-app/main/default/objects/FIN_SubledgerCode__c/listViews/UK_Subledger_Codes.listView-meta.xml
<ListView>
    <fullName>UK_Subledger_Codes</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>UK</value>
    </filters>
    <label>UK  Subledger Codes</label>
    <sharedTo>
        <group>UK_Region</group>
    </sharedTo>
</ListView>